--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,34 +1,37 @@
 {
-  "name": "herald-lp-frontend",
+  "name": "pensieve",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
-  "keywords": [],
-  "author": "DieProduktMacher GmbH",
-  "scripts": {
-    "clean": "rm dist/bundle.js",
-    "build:dev": "webpack -p --mode development",
-    "build:prod": "webpack -p --mode production",
-    "start": "webpack-dev-server",
-    "sls": "sls"
-  },
+  "private": true,
   "dependencies": {
-    "copy-webpack-plugin": "^5.0.3",
-    "flexboxgrid": "^6.3.1",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.6.0",
-    "serverless": "^1.42.3",
-    "svg-url-loader": "^2.3.2",
-    "twig-loader": "^0.4.1",
-    "webpack-dev-server": "^3.3.1"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "3.2.0",
+    "serverless": "^1.53.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "deploy:prod": "sls deploy -s development --profile pensieve --aws-profile pensieve",
+    "deploy:dev": "sls s3sync -s development --profile pensieve --aws-profile pensieve"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "css-loader": "^2.1.1",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
-    "serverless-s3-sync": "^1.8.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.0"
+    "serverless-s3-sync": "^1.9.0"
   }
 }
