--- a/initSecrets/package.json
+++ b/initSecrets/package.json
@@ -6,5 +6,9 @@
   "dependencies": {
     "qrcode": "^1.4.2",
     "speakeasy": "^2.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.7.11",
+    "ts-node": "^8.4.1"
   }
 }
