--- a/initSecrets/package.json
+++ b/initSecrets/package.json
@@ -4,11 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "prompts": "^2.2.1",
     "qrcode": "^1.4.2",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "tweetnacl": "^1.0.1",
+    "tweetnacl-util": "^0.15.0",
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "@types/node": "^12.7.11",
+    "@types/prompts": "^2.0.1",
     "ts-node": "^8.4.1"
   }
 }
