--- a/initSecrets/package.json
+++ b/initSecrets/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "prompts": "^2.2.1",
     "qrcode": "^1.4.2",
     "speakeasy": "^2.0.0",
@@ -12,6 +13,7 @@
     "typescript": "^3.6.3"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^12.7.11",
     "@types/prompts": "^2.0.1",
     "ts-node": "^8.4.1"
