--- a/initSecrets/package.json
+++ b/initSecrets/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "pbkdf2": "^3.0.17",
     "prompts": "^2.2.1",
     "qrcode": "^1.4.2",
     "speakeasy": "^2.0.0",
@@ -13,8 +13,8 @@
     "typescript": "^3.6.3"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
     "@types/node": "^12.7.11",
+    "@types/pbkdf2": "^3.0.0",
     "@types/prompts": "^2.0.1",
     "ts-node": "^8.4.1"
   }
