--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/pickers": "^3.2.6",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.12",
+    "@types/react": "16.9.5",
+    "@types/react-dom": "16.9.1",
+    "@types/yup": "^0.26.24",
+    "axios": "^0.19.0",
+    "formik": "^1.5.8",
+    "prettier": "^1.18.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
-    "serverless": "^1.53.0"
+    "typescript": "3.6.4",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy:prod": "sls deploy -s development --profile pensieve --aws-profile pensieve",
-    "deploy:dev": "sls s3sync -s development --profile pensieve --aws-profile pensieve"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "serverless": "^1.54.0",
     "serverless-s3-sync": "^1.9.0"
   }
 }
