--- a/initSecrets/package.json
+++ b/initSecrets/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^12.7.11",
     "@types/pbkdf2": "^3.0.0",
     "@types/prompts": "^2.0.1",
+    "@types/qrcode": "^1.3.4",
+    "@types/speakeasy": "^2.0.5",
     "ts-node": "^8.4.1"
   }
 }
