--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "typeface-dancing-script": "^0.0.72",
     "typescript": "3.6.4",
     "yup": "^0.27.0"
   },
