--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,10 +23,9 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "deploy:dev": "sls s3sync -s development --profile pensieve --aws-profile pensieve"
   },
   "eslintConfig": {
@@ -45,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "customize-cra": "^0.8.0",
+    "react-app-rewired": "^2.1.3",
     "serverless": "^1.54.0",
     "serverless-s3-sync": "^1.9.0"
   }
