--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "3.2.0",
     "typeface-dancing-script": "^0.0.72",
     "typescript": "3.6.4",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "sharedCrypto": "file:../sharedCrypto"
   },
   "scripts": {
     "start": "react-app-rewired start",
