--- a/sharedCrypto/package.json
+++ b/sharedCrypto/package.json
@@ -1,10 +1,20 @@
 {
   "name": "pensieve-shared-crypto",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
+    "pbkdf2": "^3.0.17",
     "tweetnacl": "^1.0.1",
     "tweetnacl-util": "^0.15.0"
+  },
+  "types": "dist/index.d.ts",
+  "devDependencies": {
+    "@types/pbkdf2": "^3.0.0",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.4"
+  },
+  "scripts": {
+    "build": "tsc"
   }
 }
