--- a/initSecrets/package.json
+++ b/initSecrets/package.json
@@ -4,17 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "pbkdf2": "^3.0.17",
     "prompts": "^2.2.1",
     "qrcode": "^1.4.2",
     "speakeasy": "^2.0.0",
-    "tweetnacl": "^1.0.1",
-    "tweetnacl-util": "^0.15.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "sharedCrypto": "file:../sharedCrypto"
   },
   "devDependencies": {
     "@types/node": "^12.7.11",
-    "@types/pbkdf2": "^3.0.0",
     "@types/prompts": "^2.0.1",
     "@types/qrcode": "^1.3.4",
     "@types/speakeasy": "^2.0.5",
