--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,14 @@
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "prettier": "^1.18.2",
+    "promise-worker": "^2.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
+    "sharedCrypto": "file:../sharedCrypto",
     "typeface-dancing-script": "^0.0.72",
     "typescript": "3.6.4",
-    "yup": "^0.27.0",
-    "sharedCrypto": "file:../sharedCrypto"
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -48,6 +49,7 @@
     "customize-cra": "^0.8.0",
     "react-app-rewired": "^2.1.3",
     "serverless": "^1.54.0",
-    "serverless-s3-sync": "^1.9.0"
+    "serverless-s3-sync": "^1.9.0",
+    "worker-loader": "^2.0.0"
   }
 }
