--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,26 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "^4.5.1",
+    "@date-io/date-fns": "^2.0.1",
+    "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/pickers": "^3.2.7",
-    "@types/jest": "24.0.19",
-    "@types/node": "12.11.1",
-    "@types/react": "16.9.9",
-    "@types/react-dom": "16.9.2",
-    "@types/yup": "^0.26.24",
-    "axios": "^0.19.0",
-    "formik": "^1.5.8",
-    "prettier": "^1.18.2",
+    "@material-ui/pickers": "^3.2.8",
+    "@types/jest": "24.0.25",
+    "@types/node": "13.1.6",
+    "@types/react": "16.9.17",
+    "@types/react-dom": "16.9.4",
+    "@types/yup": "^0.26.27",
+    "axios": "^0.19.1",
+    "formik": "^2.1.1",
+    "pensieve-shared-crypto": "file:../sharedCrypto",
+    "prettier": "^1.19.1",
     "promise-worker": "^2.0.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0",
     "sharedCrypto": "file:../sharedCrypto",
-    "typeface-dancing-script": "^0.0.72",
-    "typescript": "3.6.4",
-    "yup": "^0.27.0"
+    "typeface-dancing-script": "^1.1.3",
+    "typescript": "3.7.4",
+    "yup": "^0.28.0"
   },
   "scripts": {
     "start": "REACT_APP_BACKEND='http://localhost:5006' react-app-rewired start",
@@ -46,10 +47,10 @@
     ]
   },
   "devDependencies": {
-    "customize-cra": "^0.8.0",
-    "react-app-rewired": "^2.1.3",
-    "serverless": "^1.54.0",
-    "serverless-s3-sync": "^1.9.0",
+    "customize-cra": "^0.9.1",
+    "react-app-rewired": "^2.1.5",
+    "serverless": "^1.61.0",
+    "serverless-s3-sync": "^1.10.1",
     "worker-loader": "^2.0.0"
   }
 }
