--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "13.1.6",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "@types/uuid": "^3.4.6",
     "@types/yup": "^0.26.27",
     "axios": "^0.19.1",
     "formik": "^2.1.1",
@@ -23,6 +24,7 @@
     "sharedCrypto": "file:../sharedCrypto",
     "typeface-dancing-script": "^1.1.3",
     "typescript": "3.7.4",
+    "uuid": "^3.4.0",
     "yup": "^0.28.0"
   },
   "scripts": {
