--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@types/node": "13.1.6",
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "@types/uuid": "^3.4.6",
     "@types/yup": "^0.26.27",
     "axios": "^0.19.1",
@@ -20,6 +21,7 @@
     "promise-worker": "^2.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "sharedCrypto": "file:../sharedCrypto",
     "typeface-dancing-script": "^1.1.3",
